--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "require": {
     "php": "^7.3",
     "guzzlehttp/guzzle": "^6.5",
-    "ext-json": "*"
+    "ext-json": "*",
+    "spatie/data-transfer-object": "^1.13"
   },
   "require-dev": {
     "orchestra/testbench": "^4.5"
