--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "php": ">=7.4",
     "guzzlehttp/guzzle": "^7.0.1",
     "ext-json": "*",
-    "spatie/data-transfer-object": "^3.7",
+    "spatie/data-transfer-object": "2.8.1",
     "phpunit/phpunit": "^9.5"
   },
   "require-dev": {
